--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thorin-plugin-queue",
-  "author": "Stiudeo",
-  "version": "1.0.4",
+  "author": "UNLOQ Systems",
+  "version": "1.0.5",
   "dependencies": {},
   "description": "Thorin.js queue wrapper",
   "main": "index.js",
